frontend create new TaskLog
